# a-simple-mcp-client

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/app/: main.py  mcp_client.py
api/app/utils/: logging.py  loguru.py
ui/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
ui/app/: chatbot.py  main.py
